--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
+
+      <!-- for responsive nav bar -->
+
+      <div class="dropdown">
+        <button class="dropbtn"><i class="fa-solid fa-bars"></i></button>
+        <div class="dropdown-content">
+            <a href="#">Home</a>
+            <a href="#about">About</a>
+            <a href="#destination">Destination</a>
+            <a href="#hotel">Hotel</a>
+            <a href="#activities">Activities</a>
+            <a href="#contact">Contact</a>
+        </div>
+    </div>
     </header>
 
     <main>
