--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div>
       </div>
     </section>
-         <div class="view-all"><a href="" class=" view-popular">View All</a></div>
+         <div class="view-all"><a href="./html folder/popular.html" target="_blank" class=" view-popular">View All</a></div>
       
 
     <!-- Featured Hotels -->
@@ -142,7 +142,7 @@
         </div>
       </div>
     </section>
-    <div class="view-all"><a href="" class=" view-popular">View All</a></div>
+    <div class="view-all"><a href="./html folder/hotel.html" target="_blank" class=" view-popular">View All</a></div>
 
       <!-- Featured Activities -->
     
