--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           </div>
         </div>
       </section>
-      <div class="view-all"><a href="" class=" view-popular">View All</a></div>
+      <div class="view-all"><a href="./html folder/activities.html" target="_blank" class=" view-popular">View All</a></div>
   
 
       <!-- About Us -->
@@ -246,7 +246,7 @@
         <a href="https://www.instagram.com/accounts/login/?source=logged_out_megaphone_signup" target="_blank"><i class="fa-brands fa-instagram"></i></a>
 
       </div>
-      <p>&copy; 2025 Your Travel Website.All Right Reservation.</p>
+      <p>&copy; 2025  Travel India Website.All Right Reservation.</p>
     </footer>
 
 
